--- a/PVB Stage Applicatie/Views/Bedrijf/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Details.cshtml
@@ -10,7 +10,10 @@
 </script>
 @section zijMenu{
     <ul>
+@if (User.IsInRole("Beheerder"))
+{
     <li>@Html.ActionLink("Edit", "Edit", new { id = Model.BedrijfID })</li>
+}
     <li>@Html.ActionLink("Back to List", "Index")</li>
 </ul>
 }
