--- a/PVB Stage Applicatie/Views/Koppeling/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Index.cshtml
@@ -3,17 +3,23 @@
 @{
     ViewBag.Title = "Index";
 }
-@section zijMenu{
-    <ul>
-        <li>@Html.ActionLink("Nieuwe koppeling", "Create")</li>
-        <li>@Html.ActionLink("Bulk invoer", "")</li>
-    </ul>
+@if (User.IsInRole("Beheerder"))
+{
+    @section zijMenu{
+        <ul>
+            <li>@Html.ActionLink("Nieuwe koppeling", "Create")</li>
+            <li>@Html.ActionLink("Bulk invoer", "")</li>
+        </ul>
+    }
 }
 <h2>Index</h2>
+@if (User.IsInRole("Beheerder"))
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+}
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table>
     <tr>
         <th>
@@ -31,27 +37,28 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Persoonsgegevens.Voornaam)
-            @Html.DisplayFor(modelItem => item.Persoonsgegevens.Achternaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Voornaam)
-            @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Achternaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Periode.Periode1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Voornaam)
-            @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Achternaam)
-        </td>
-        <td>
-            @Html.ActionLink("Details", "Details", new { id=item.StageID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Persoonsgegevens.Voornaam)
+                @Html.DisplayFor(modelItem => item.Persoonsgegevens.Achternaam)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Voornaam)
+                @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Achternaam)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Periode.Periode1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Voornaam)
+                @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Achternaam)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "Details", new { id = item.StageID })
+            </td>
+        </tr>
+    }
 
 </table>
