--- a/PVB Stage Applicatie/Views/Stagiair/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Details.cshtml
@@ -4,131 +4,138 @@
     ViewBag.Title = "Details";
 }
 
+@section ZijMenu{
+    <ul>
+        @if(User.IsInRole("Beheerder"))
+        {
+        <li>@Html.ActionLink("Edit", "Edit", new { id = Model.PersoonsgegevensID }) </li>
+        }
+<li>@Html.ActionLink("Back to List", "Index") </li>
+</ul>
+}
+
 <h2>Details</h2>
 
 <fieldset>
     <legend>Persoonsgegevens</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Rol)
+        @Html.DisplayNameFor(model => model.Rol)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Rol)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Voornaam)
+        @Html.DisplayNameFor(model => model.Voornaam)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Voornaam)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Achternaam)
+        @Html.DisplayNameFor(model => model.Achternaam)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Achternaam)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Tussenvoegsel)
+        @Html.DisplayNameFor(model => model.Tussenvoegsel)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Tussenvoegsel)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Email)
+        @Html.DisplayNameFor(model => model.Email)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Email)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Straat)
+        @Html.DisplayNameFor(model => model.Straat)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Straat)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Huisnummer)
+        @Html.DisplayNameFor(model => model.Huisnummer)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Huisnummer)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Toevoeging)
+        @Html.DisplayNameFor(model => model.Toevoeging)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Toevoeging)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Postcode)
+        @Html.DisplayNameFor(model => model.Postcode)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Postcode)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Plaats)
+        @Html.DisplayNameFor(model => model.Plaats)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Plaats)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Actief)
+        @Html.DisplayNameFor(model => model.Actief)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Actief)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.NonActiefReden)
+        @Html.DisplayNameFor(model => model.NonActiefReden)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.NonActiefReden)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.MedewerkerID)
+        @Html.DisplayNameFor(model => model.MedewerkerID)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.MedewerkerID)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.StudentNummer)
+        @Html.DisplayNameFor(model => model.StudentNummer)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.StudentNummer)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Opleiding)
+        @Html.DisplayNameFor(model => model.Opleiding)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Opleiding)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Opleidingsniveau)
+        @Html.DisplayNameFor(model => model.Opleidingsniveau)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Opleidingsniveau)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Bedrijf1.Naam)
+        @Html.DisplayNameFor(model => model.Bedrijf1.Naam)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Bedrijf1.Naam)
     </div>
 </fieldset>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.PersoonsgegevensID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
