--- a/PVB Stage Applicatie/Views/Stagiair/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Index.cshtml
@@ -5,10 +5,12 @@
 }
 
 <h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@if (User.IsInRole("Beheerder"))
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+}
 <table>
     <tr>
         <th>
@@ -23,22 +25,26 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Voornaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Achternaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StudentNummer)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PersoonsgegevensID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PersoonsgegevensID }) |
-        </td>
-    </tr>
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Voornaam)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Achternaam)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StudentNummer)
+            </td>
+            <td>
+                @if (User.IsInRole("Beheerder"))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id=item.PersoonsgegevensID }) 
+                }
+                @Html.ActionLink("Details", "Details", new { id=item.PersoonsgegevensID })
+            </td>
+
+        </tr>
 }
 
 </table>
