--- a/PVB Stage Applicatie/Content/Site.css
+++ b/PVB Stage Applicatie/Content/Site.css
@@ -23,9 +23,9 @@ legend {
     font-weight: bold;
 }
 
-textarea {
+/*textarea {
     min-height: 75px;
-}
+}*/
 
 .editor-label {
     margin: 1em 0 0 0;
