bugfix, navigatie gepruts

--- a/PVB Stage Applicatie/Views/Beoordeling/Selecteer.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/Selecteer.cshtml
@@ -1,12 +1,25 @@
 ﻿@model IEnumerable<PVB_Stage_Applicatie.Models.StudentViewModel>
 <script type="text/javascript">
     var myArray = [];
+    var output = [];
     debugger;
     @foreach (var d in Model)
     {
-        @:myArray.push("@d.Voornaam" + " " + "@d.Achternaam" + "@d.PersoonsgegevensID");
-    }
+        @:myArray.push({ "@d.PersoonsgegevensID": "@d.Voornaam" + " " + "@d.Achternaam" });
+        }
+    $(document).ready(function () { 
+        $.each(myArray, function (key, value) {
+            debugger;
+            $('#studenten')
+                .append($("<option></option>")
+                .attr("value",key)
+                .text(value)); 
+        });
+    });
+
+
 </script>
+
 
 @{
     ViewBag.Title = "Selecteer";
@@ -14,3 +27,4 @@
 @Html.Hidden("Studenten", string.Join(",", (object)ViewBag.student))
 @Html.Hidden("Periodes", string.Join(",", (object)ViewBag.stageperiode))
 <h2>Selecteer voor wie u een beoordeling toe wil voegen</h2>
+<select id="studenten"></select>
