--- a/PVB Stage Applicatie/Views/Beoordeling/CreateFormulier.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/CreateFormulier.cshtml
@@ -1,33 +1,33 @@
-﻿@model PVB_Stage_Applicatie.Models.Beoordeling
+﻿@model PVB_Stage_Applicatie.Models.Stage
 
 @{
     ViewBag.Title = "Create";
 }
 
-<style type="text/css">
-    table, th, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
+    <style type="text/css">
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
 
-    th, td {
-        padding: 5px;
-    }
+        th, td {
+            padding: 5px;
+        }
 
-    cvsmaster {
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
+        cvsmaster {
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
 
 
 
-    .clsbtn {
-        text-align: center;
-        vertical-align: middle;
-    }
-</style>
+        .clsbtn {
+            text-align: center;
+            vertical-align: middle;
+        }
+    </style>
 <script>
     var BeoordelingID;
     var Stage;
