--- a/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
@@ -17,6 +17,7 @@
                    new { LinkText="Mijn Stages", ActionName="Index",ControllerName="Koppeling",Roles= "Docent" },
                    new { LinkText="Mijn Stageperiodes", ActionName="Index",ControllerName="Periode",Roles= "Docent" },
                    new { LinkText="Beoordelingen", ActionName="Index",ControllerName="Beoordeling",Roles= "Docent" },
+                   new { LinkText="Gespreksformulieren", ActionName="Index",ControllerName="Gespreksformulier",Roles= "Docent" },
                    //Algemeen
                    new { LinkText="Uitloggen", ActionName="logUit",ControllerName="Login",Roles= "Beheerder"+ ","+ "Docent" },
                    new { LinkText="Inloggen", ActionName="Index",ControllerName="Login",Roles= "Anonymous"}
