--- a/PVB Stage Applicatie/Views/Beoordeling/CreateEindbeoordeling.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/CreateEindbeoordeling.cshtml
@@ -189,14 +189,14 @@
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     Beoordeling1
-<input name="Beoordeling1" type="radio" value="1"> O Onvoldoende</input>
-<input name="Beoordeling1" type="radio" value="2"> M Matig</input>
-<input name="Beoordeling1" type="radio" value="3"> V Voldoende</input>
-<input name="Beoordeling1" type="radio" value="4"> G Goed</input>
-<input name="Beoordeling1" type="radio" value="5"> X Niet van toepassing</input>
+<input name="Beoordeling1" type="radio" value="1"> O Onvoldoende
+<input name="Beoordeling1" type="radio" value="2"> M Matig
+<input name="Beoordeling1" type="radio" value="3"> V Voldoende
+<input name="Beoordeling1" type="radio" value="4"> G Goed
+<input name="Beoordeling1" type="radio" value="5"> X Niet van toepassing
 
-    </br>
-    </br>
+    <br />
+    <br />
 
 <table>
     <thead>
