Nog wat kleine dingetjes

--- a/PVB Stage Applicatie/Views/Koppeling/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Index.cshtml
@@ -8,7 +8,7 @@
     @section zijMenu{
         <ul>
             <li>@Html.ActionLink("Nieuwe koppeling", "Create")</li>
-            <li>@Html.ActionLink("Bulk invoer", "")</li>
+            <li>@Html.ActionLink("Bulk invoer", "BulkInvoerKoppeling")</li>
         </ul>
     }
 }
